複数の計算実行時に並列計算数の上限に応じてステータスにwaiting,runningを割り当てる機能を実装。
